added another rest endpoint for currency exchange rates - as a first try.

--- a/src/main/resources/templates/lastCurrencies.html
+++ b/src/main/resources/templates/lastCurrencies.html
@@ -10,14 +10,15 @@
 
 <body>
 
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Info-currency</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Strona główna</a></li>
-            <li><a href="currencies">Waluty</a></li>
+            <li><a href="/">Strona główna</a></li>
+            <li class="active"><a href="currencies">Waluty</a></li>
             <li><a href="#">Giełda</a></li>
             <li><a href="#">Papiery wartościowe</a></li>
         </ul>
@@ -26,12 +27,12 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1>Witaj Gościu!</h1>
-        <p>Zaloguj się aby skorzystać z wszystkich funkcjonalności aplikacji.</p>
+        <h1>Oto kursy walut z dnia dzisiejszego:</h1>
     </div>
-    <p>kursy walut</p>
-    <p>i inne...</p>
 </div>
+
+{{currenciesXML}}
+
 </body>
 
 </html>
