Currency rate search changed

--- a/src/main/resources/templates/currency.html
+++ b/src/main/resources/templates/currency.html
@@ -29,7 +29,17 @@
     <div class="jumbotron">
         <h1>Oto kursy walut z dnia dzisiejszego:</h1>
     </div>
+
+    <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Wybierz walutę:
+            <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+            <li><a href="#">EUR</a></li>
+            <li><a href="#">USD</a></li>
+        </ul>
+    </div>
 </div>
+
 
 
 <div align="center" class="container">
