Fixed Data bug, added logic for currency converter, partially added view for currency converter

--- a/src/main/resources/templates/welcomePage.html
+++ b/src/main/resources/templates/welcomePage.html
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Strona główna</a></li>
             <li><a href="currencies">Waluty</a></li>
-            <li><a href="#">Giełda</a></li>
+            <li><a href="converter">Przelicznik walut</a></li>
             <li><a href="#">Papiery wartościowe</a></li>
         </ul>
     </div>
