Added new currencies

--- a/src/main/resources/templates/currency.html
+++ b/src/main/resources/templates/currency.html
@@ -36,6 +36,13 @@
         <ul class="dropdown-menu">
             <li><a href="#">EUR</a></li>
             <li><a href="#">USD</a></li>
+            <li><a href="#">CHF</a></li>
+            <li><a href="#">JPY</a></li>
+            <li><a href="#">AUD</a></li>
+            <li><a href="#">CAD</a></li>
+            <li><a href="#">DKK</a></li>
+            <li><a href="#">NOK</a></li>
+            <li><a href="#">SEK</a></li>
         </ul>
     </div>
 </div>
