--- a/src/main/resources/templates/converter.html
+++ b/src/main/resources/templates/converter.html
@@ -71,6 +71,13 @@
         <ul class="dropdown-menu">
             <li><a href="#">EUR</a></li>
             <li><a href="#">USD</a></li>
+            <li><a href="#">CHF</a></li>
+            <li><a href="#">JPY</a></li>
+            <li><a href="#">AUD</a></li>
+            <li><a href="#">CAD</a></li>
+            <li><a href="#">DKK</a></li>
+            <li><a href="#">NOK</a></li>
+            <li><a href="#">SEK</a></li>
         </ul>
 
         <script>
@@ -91,6 +98,13 @@
         <ul class="dropdown-menu">
             <li><a href="#">EUR</a></li>
             <li><a href="#">USD</a></li>
+            <li><a href="#">CHF</a></li>
+            <li><a href="#">JPY</a></li>
+            <li><a href="#">AUD</a></li>
+            <li><a href="#">CAD</a></li>
+            <li><a href="#">DKK</a></li>
+            <li><a href="#">NOK</a></li>
+            <li><a href="#">SEK</a></li>
         </ul>
 
         <script>
