--- a/src/main/resources/templates/lastCurrencies.html
+++ b/src/main/resources/templates/lastCurrencies.html
@@ -112,6 +112,31 @@
             }
         });
     }
+
+    function getHistory() {
+        var request = $.ajax({
+            url: "/history/get",
+            type: "GET",
+            dataType: "json",
+            success: function(response) {
+                if(response.data) {
+                    var tr;
+                    for (var i = 0; i < response.data.length; i++) {
+                        tr = $('<tr/>');
+                        tr.append("<td>" + response.data[i].currency + "</td>");
+                        tr.append("<td>" + response.data[i].upToDateRates + "</td>");
+                        tr.append("<td>" + response.data[i].historicalDate + "</td>");
+                        tr.append("<td>" + response.data[i].lowHistDate + "</td>");
+                        tr.append("<td>" + response.data[i].highHistDate + "</td>");
+                        $('#historyTable').append(tr);
+                    }
+                }
+            },
+            error: function(response) {
+                document.getElementById("historyDiv").style.display = "none";
+            }
+        });
+    }
 </script>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -130,6 +155,27 @@
 <div class="container">
     <div class="jumbotron">
         <h1>Oto kursy walut z dnia dzisiejszego:</h1>
+    </div>
+
+    <div id="historyButton">
+        <button type="button" class="btn btn-success" onclick="getHistory()">Pobierz historię wyszukiwań</button>
+    </div>
+
+    <div class="container" id="historyDiv">
+        <table id="historyTable" border="1">
+            <thead>
+                <tr>
+                    <td>Waluta</td>
+                    <td>Aktualny kurs</td>
+                    <td>Historyczny kurs</td>
+                    <td>Początkowa data</td>
+                    <td>Końcowa data</td>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
     </div>
 
     <div class="dropdown">
