Added login page

--- a/src/main/resources/templates/converter.html
+++ b/src/main/resources/templates/converter.html
@@ -53,6 +53,7 @@
             <li><a href="currencies">Waluty</a></li>
             <li class="active"><a href="converter">Przelicznik walut</a></li>
             <li><a href="#">Papiery wartościowe</a></li>
+            <li><a href="login">Zaloguj</a></li>
         </ul>
     </div>
 </nav>
