--- a/src/main/resources/templates/currency.html
+++ b/src/main/resources/templates/currency.html
@@ -21,6 +21,7 @@
             <li class="active"><a href="currencies">Waluty</a></li>
             <li><a href="converter">Przelicznik walut</a></li>
             <li><a href="#">Papiery wartościowe</a></li>
+            <li><a href="login">Zaloguj</a></li>
         </ul>
     </div>
 </nav>
