--- a/src/main/resources/templates/welcomePage.html
+++ b/src/main/resources/templates/welcomePage.html
@@ -20,6 +20,7 @@
             <li><a href="currencies">Waluty</a></li>
             <li><a href="converter">Przelicznik walut</a></li>
             <li><a href="#">Papiery wartościowe</a></li>
+            <li><a href="login">Zaloguj</a></li>
         </ul>
     </div>
 </nav>
